--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ margin-bottom: -12px ;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: blanchedalmond;
 }
 
 .menu__list-link{
